# wgpu-app

./: Cargo.toml  index.html
.cargo/: config.toml
pkg/: wgpu_app.d.ts  wgpu_app.js  wgpu_app_bg.wasm  wgpu_app_bg.wasm.d.ts
src/: app.rs  lib.rs  main.rs  shader.wgsl
