[package]
name = "wgpu-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.14.0"
env_logger = "0.10.1"
glam = "0.25.0"
log = "0.4.20"
pollster = "0.3.0"
web-time = "0.2.4"
wgpu = "0.18"
winit = { version = "0.29", features = ["rwh_05"]}
