[package]
name = "wgpu-app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.14.0"
glam = "0.25.0"
log = "0.4.20"
pollster = "0.3.0"
web-time = "0.2.4"
wgpu = "0.19"
winit = { version = "0.29", features = ["rwh_05"]}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
  "Location",
  "Blob",
  "RequestInit",
  "RequestMode",
  "Request",
  "ImageData",
  "Response",
  "HtmlImageElement",
  "WebGl2RenderingContext",
  "CanvasRenderingContext2d"
]}
